Aggiunto: i metodi principali di OrdineService